fix off center challenge card

--- a/app/assets/stylesheets/challenges.scss
+++ b/app/assets/stylesheets/challenges.scss
@@ -271,15 +271,10 @@
       margin-left: 42px;
 
       .Completed {
-        font-family: Raleway;
         font-size: 60px;
         font-weight: 900;
-        font-style: normal;
-        font-stretch: normal;
-        line-height: normal;
         letter-spacing: -0.2px;
         color: #4f5151;
-        margin-bottom: 16px;
         margin-top: 42px;
       }
 
